--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -59,27 +59,27 @@
   "equip":{
     "title": "核心设备",
     "zm1": {
-      "title": "二十重式冷轧机(ZM1)",
+      "title": "二十重式冷轧机",
       "phase1": "20-High Cold Rolling Mill",
       "phase2": "为将热轧钢卷利用冷轧技术轧延至厚度0.25~1.5mm， 并提高平坦度及亮度。"
     },
     "ba": {
-      "title": "光辉退火线(BA)",
+      "title": "光辉退火线",
       "phase1": "Bright Annealing Line",
       "phase2": "为将经轧研后之硬质钢卷退火,使其晶粒成长而软化而具被加工性。"
     },
     "spl": {
-      "title": "调质精轧机(SPL)",
+      "title": "调质精轧机",
       "phase1": "Skin Pass Mill",
       "phase2": "为进行钢卷调质作业,提升产品亮度与加工性。"
     },
     "tll": {
-      "title": "张力整平线(TLL)",
+      "title": "张力整平线",
       "phase1": "Tension Levelling Line",
       "phase2": "为将钢板表面整平，获得更好的表面平坦度及调整机械性质。"
     },
     "sl": {
-      "title": "钢卷分条线(SL)",
+      "title": "钢卷分条线",
       "phase1": "Slitting Line",
       "phase2": "主要功能为依订单需求将钢卷分条为各种不同宽度尺寸之窄幅钢卷"
     }
@@ -132,22 +132,22 @@
     "lists": {
       "title": "国际标准质量认证",
       "phase1": "远龙在产品质量上展现坚持，制造符合 ISO、JIS、EN、ASTM 及 CNS 等国际标准制程产品。远龙更拥有专属的品检实验室，定期接受 TAF 认证合格，通过产品自检确保一致性的质量水平。",
-      "iso9001": "ISO 9001  2015版(20240426-20270425)_质量管理系统",
+      "iso9001": "ISO 9001：2015质量管理系统",
       "iso5001": "ISO 50001 2018版(20201118-20231118)_能源管理系统",
-      "iso45001": "ISO 45001  2018版(20220729-20250708)_职业安全卫生管理系统",
-      "cns45001_1": "TOSHMS   CNS 45001：2018(1110729-1140707)_台湾职业卫生管理系统",
-      "cns45001_2": "TOSHMS   CNS 45001：2018(1110729-1140707)_台湾职业卫生管理系统",
+      "iso45001": "ISO 45001：2018职业安全卫生管理系统",
+      "cns45001_1": "TOSHMS CNS 45001：2018台湾职业卫生管理系统",
+      "cns45001_2": "TOSHMS CNS 45001：2018台湾职业卫生管理系统",
       "iso14001": "ISO 14001  2015版(20220729-20250721)_环境管理系统",
-      "iso14064": "ISO 14064-1 2018版(20220810)温室气体查验声明书",
-      "iso14067": "ISO 14067 2018版(20230306-20250305)碳足迹查证声明书",
+      "iso14064": "ISO 14064-1：2018温室气体查验声明书",
+      "iso14067": "ISO 14067：2018碳足迹查证声明书",
       "iso17025": "ISO/IEC 17025：2017；CNS17025：2018 实验室认证证书",
-      "iatf16949": "IATF 16949 2016版(20240426-20270425)_汽车质量管理系统验证",
-      "bis-is-6911": "BIS IS 6911",
-      "cns8499": "CNS 8499",
-      "jis4305": "JQA JIS G 4305",
+      "iatf16949": "IATF 16949：2016汽车质量管理系统验证",
+      "bis-is-6911": "印度BIS证书",
+      "cns8499": "正字标记CNS 8679号",
+      "jis4305": "JIS MARK G4305 产品认证",
       "cns17025": "ISO/IEC 17025：2017；CNS17025：2018 实验室认证证书",
-      "iso14046_ch": "ISO 14046(2014版)-中文",
-      "iso14046_en": "ISO 14046(2014版)-英文"
+      "iso14046_ch": "ISO 14046：2014水足迹查证声明书",
+      "iso14046_en": "ISO 14046：2014水足迹查证声明书"
     }
   },
   "recurit": {
@@ -190,12 +190,8 @@
         "content2": "补助费用：婚丧喜庆补助、子女教育补助、旅游补助、急难救助补助。"
       },
       "companyBenefits": {
-        "title": "公司福利项目",
-        "content": "员工健康检查、提供员工制服、提供员工厂内停车位(免费)、亲子旅游活动、员工旅游、读书会、社团活动、圣诞活动(移工同乐会)、尾牙活动、员工荣退欢送会。"
-      },
-      "insurance": {
-        "title": "员工保险",
-        "content": "劳健保、职保、团保、劳退提拨。"
+        "title": "公司福利项目：",
+        "content": "劳健保、职保、团保、劳退提拨、员工健康检查、提供员工制服、提供员工厂内停车位、亲子旅游活动、员工旅游、读书会、社团活动、圣诞活动(移工同乐会)、尾牙活动、员工荣退欢送会。"
       },
       "training": {
         "title": "教育训练",
