--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -59,27 +59,27 @@
   "equip":{
     "title": "核心設備",
     "zm1": {
-      "title": "二十重式冷軋機(ZM1)",
+      "title": "二十重式冷軋機",
       "phase1": "20-High Cold Rolling Mill",
       "phase2": "為將熱軋鋼捲利用冷軋技術軋延至厚度0.25~1.5mm， 並提高平坦度及亮度。"
     },
     "ba": {
-      "title": "光輝退火線(BA)",
+      "title": "光輝退火線",
       "phase1": "Bright Annealing Line",
       "phase2": "為將經軋研後之硬質鋼捲退火,使其晶粒成長而軟化而具被加工性。"
     },
     "spl": {
-      "title": "調質精軋機(SPL)",
+      "title": "調質精軋機",
       "phase1": "Skin Pass Mill",
       "phase2": "為進行鋼捲調質作業,提昇產品亮度與加工性。"
     },
     "tll": {
-      "title": "張力整平線(TLL)",
+      "title": "張力整平線",
       "phase1": "Tension Levelling Line",
       "phase2": "為將鋼板表面整平，獲得更好的表面平坦度及調整機械性質。"
     },
     "sl": {
-      "title": "鋼捲分條線(SL)",
+      "title": "鋼捲分條線",
       "phase1": "Slitting Line",
       "phase2": "主要功能為依訂單需求將鋼捲分條為各種不同寬度尺寸之窄幅鋼捲"
     }
@@ -132,22 +132,22 @@
     "lists": {
       "title": "國際標準品質認證",
       "phase1": "遠龍在產品品質上展現堅持，製造符合 ISO、JIS、EN、ASTM 及 CNS 等國際標準製程產品。遠龍更擁有專屬的品檢實驗室，定期接受 TAF 認證合格，透過產品自檢確保一致性的品質水準。",
-      "iso9001": "ISO 9001  2015版(20240426-20270425)_品質管理系統",
+      "iso9001": "ISO 9001：2015品質管理系統",
       "iso5001": "ISO 50001 2018版(20201118-20231118)_能源管理系統",
-      "iso45001": "ISO 45001  2018版(20220729-20250708)_職業安全衛生管理系統",
-      "cns45001_1": "TOSHMS   CNS 45001：2018(1110729-1140707)_台灣職業衛生管理系統",
-      "cns45001_2": "TOSHMS   CNS 45001：2018(1110729-1140707)_台灣職業衛生管理系統",
+      "iso45001": "ISO 45001：2018職業安全衛生管理系統",
+      "cns45001_1": "TOSHMS CNS 45001：2018台灣職業衛生管理系統",
+      "cns45001_2": "TOSHMS CNS 45001：2018台灣職業衛生管理系統",
       "iso14001": "ISO 14001  2015版(20220729-20250721)_環境管理系統",
-      "iso14064": "ISO 14064-1 2018版(20220810)溫室氣體查驗聲明書",
-      "iso14067": "ISO 14067 2018版(20230306-20250305)碳足跡查證聲明書",
+      "iso14064": "ISO 14064-1：2018溫室氣體查驗聲明書",
+      "iso14067": "ISO 14067：2018碳足跡查證聲明書",
       "iso17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
-      "iatf16949": "IATF 16949 2016版(20240426-20270425)_汽車品質管理系統驗證",
-      "bis-is-6911": "BIS IS 6911",
-      "cns8499": "CNS 8499",
-      "jis4305": "JQA JIS G 4305",
+      "iatf16949": "IATF 16949：2016汽車品質管理系統驗證",
+      "bis-is-6911": "印度BIS證書",
+      "cns8499": "正字標記CNS 8679號",
+      "jis4305": "JIS MARK G4305 產品認證",
       "cns17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
-      "iso14046_ch": "ISO 14046(2014版)-中文",
-      "iso14046_en": "ISO 14046(2014版)-英文"
+      "iso14046_ch": "ISO 14046：2014水足跡查證聲明書",
+      "iso14046_en": "ISO 14046：2014水足跡查證聲明書"
     }
   },
   "recurit": {
@@ -166,7 +166,7 @@
     },
     "personalGrowth": {
       "title": "個人成長",
-      "content": "我們相信優秀的人才是公司最重要的資產。提供多樣的培訓課程與明確的晉升管道，幫助每位成員在職業上不斷成長。"
+      "content": "我們相信優秀的人才是公司最重要的資產。提供多樣的培訓課程與明確的晉升管道，幫助每位成員在職涯上不斷成長。"
     },
     "workLifeBalance": {
       "title": "工作生活平衡",
@@ -190,12 +190,8 @@
         "content2": "補助費用：婚喪喜慶補助、子女教育補助、旅遊補助、急難救助補助。"
       },
       "companyBenefits": {
-        "title": "公司福利項目",
-        "content": "員工健康檢查、提供員工制服、提供員工廠內停車位(免費)、親子旅遊活動、員工旅遊、讀書會、社團活動、聖誕活動(移工同樂會)、尾牙活動、員工榮退歡送會。"
-      },
-      "insurance": {
-        "title": "員工保險",
-        "content": "勞健保、職保、團保、勞退提撥。"
+        "title": "公司福利項目：",
+        "content": "勞健保、職保、團保、勞退提撥、員工健康檢查、提供員工制服、提供員工廠內停車位、親子旅遊活動、員工旅遊、讀書會、社團活動、聖誕活動(移工同樂會)、尾牙活動、員工榮退歡送會。"
       },
       "training": {
         "title": "教育訓練",
