--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -129,6 +129,11 @@
   },
   "cert":{
     "title": "标准认证",
+    "heading1": "环境认证",
+    "heading2": "职业安全卫生认证", 
+    "heading3": "质量认证",
+    "heading4": "产品认证",
+    "heading5": "能源认证",
     "lists": {
       "title": "国际标准质量认证",
       "phase1": "远龙在产品质量上展现坚持，制造符合 ISO、JIS、EN、ASTM 及 CNS 等国际标准制程产品。远龙更拥有专属的品检实验室，定期接受 TAF 认证合格，通过产品自检确保一致性的质量水平。",
