--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -129,6 +129,11 @@
   },
   "cert":{
     "title": "標準認證",
+    "heading1": "環境認證",
+    "heading2": "職業安全衛生認證",
+    "heading3": "品質認證",
+    "heading4": "產品認證",
+    "heading5": "能源認證",
     "lists": {
       "title": "國際標準品質認證",
       "phase1": "遠龍在產品品質上展現堅持，製造符合 ISO、JIS、EN、ASTM 及 CNS 等國際標準製程產品。遠龍更擁有專屬的品檢實驗室，定期接受 TAF 認證合格，透過產品自檢確保一致性的品質水準。",
