--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -21,7 +21,7 @@
     "intro": "Yuan long stainless steel corp."
   },
   "index": {
-    "intro": "<span class='h5'>远龙不锈钢</span>股份有限公司成立于2005年，隶属远东集团所有，为冷轧不锈钢供应商年产能13万吨，产品销售全球40余国。<br> ➤ 远龙以台湾为基地，于全球金属加工业市场中展现傲人实力。<br>➤ 远龙全面执行质量管理系统，落实持续改善的精神，不断提升质量与生产力，产品深受顾客信赖与肯定。<br> ➤ 远龙2050年达到净零排放为目标，通过各项能源管理措施，以实际行动做好节约减碳，为地球永续尽一份心力。",
+    "intro": "<span class='h5'>远龙不锈钢</span>股份有限公司成立于2005年，隶属远东集团所有，为冷轧不锈钢供应商年产能13万吨，产品销售全球40余国。<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙以台湾为基地，于全球金属加工业市场中展现傲人实力。<br><img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙全面执行质量管理系统，落实持续改善的精神，不断提升质量与生产力，产品深受顾客信赖与肯定。<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙2050年达到净零排放为目标，通过各项能源管理措施，以实际行动做好节约减碳，为地球永续尽一份心力。",
     "feature1": "价值传承",
     "feature1_subtitle": "Value inheritance",
     "feature2": "幸福职安",
