[modify] fix page servel issue

--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -138,7 +138,7 @@
       "title": "International Quality Standards Certification",
       "phase1": "YLSS demonstrates a commitment to quality by achieving international certifications such as ISO, JIS, BIS, IATF, TAF, and CNS.",
       "iso9001": "ISO 9001 2015 version (20240426-20270425) Quality Management System",
-      "iso5001": "ISO 50001 2018 version (20201118-20231118) Energy Management System",
+      "iso5001": "ISO 50001 2018 version Energy Management System",
       "iso45001": "ISO 45001 2018 version (20220729-20250708) Occupational Health and Safety Management System",
       "cns45001_1": "TOSHMS CNS 45001: 2018 (1110729-1140707) Taiwan Occupational Health Management System",
       "cns45001_2": "TOSHMS CNS 45001: 2018 (1110729-1140707) Taiwan Occupational Health Management System",
