--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -138,7 +138,7 @@
       "title": "国际标准质量认证",
       "phase1": "远龙在产品质量上展现坚持，制造符合 ISO、JIS、EN、ASTM 及 CNS 等国际标准制程产品。远龙更拥有专属的品检实验室，定期接受 TAF 认证合格，通过产品自检确保一致性的质量水平。",
       "iso9001": "ISO 9001：2015质量管理系统",
-      "iso5001": "ISO 50001 2018版(20201118-20231118)_能源管理系统",
+      "iso5001": "ISO 50001 2018版_能源管理系统",
       "iso45001": "ISO 45001：2018职业安全卫生管理系统",
       "cns45001_1": "TOSHMS CNS 45001：2018台湾职业卫生管理系统",
       "cns45001_2": "TOSHMS CNS 45001：2018台湾职业卫生管理系统",
