--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -138,7 +138,7 @@
       "title": "國際標準品質認證",
       "phase1": "遠龍在產品品質上展現堅持，製造符合 ISO、JIS、EN、ASTM 及 CNS 等國際標準製程產品。遠龍更擁有專屬的品檢實驗室，定期接受 TAF 認證合格，透過產品自檢確保一致性的品質水準。",
       "iso9001": "ISO 9001：2015品質管理系統",
-      "iso5001": "ISO 50001 2018版(20201118-20231118)_能源管理系統",
+      "iso5001": "ISO 50001 2018版_能源管理系統",
       "iso45001": "ISO 45001：2018職業安全衛生管理系統",
       "cns45001_1": "TOSHMS CNS 45001：2018台灣職業衛生管理系統",
       "cns45001_2": "TOSHMS CNS 45001：2018台灣職業衛生管理系統",
