[modify] progress backup

--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -13,7 +13,7 @@
     "askingPrice": "询价"
   },
   "footer": {
-    "address": "高雄市812小港区大业南路28号",
+    "address": "812 高雄市小港区大业南路28号",
     "phone": "+886-7-975-7988",
     "fax": "+886-7-975-7986",
     "email": "{'sales@ylss.com.tw'}",
