--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -13,7 +13,7 @@
     "askingPrice": "詢價"
   },
   "footer": {
-    "address": "高雄市812小港區大業南路28號",
+    "address": "812 高雄市小港區大業南路28號",
     "phone": "+886-7-975-7988",
     "fax": "+886-7-975-7986",
     "email": "{'sales@ylss.com.tw'}",
