--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -22,14 +22,14 @@
   },
   "index": {
     "intro": "<span class='h5'>Yuan Long Stainless Steel</span> Corporation, established in 2005, is a subsidiary of the Far Eastern Group. As a cold-rolled stainless steel supplier with an annual production capacity of 130,000 tons, our products are sold to over 40 countries worldwide.<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> With Taiwan as its base, Yuan Long demonstrates impressive strength in the global metal processing industry market.<br><img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> Yuan Long fully implements a quality management system, embodying the spirit of continuous improvement, constantly enhancing quality and productivity. Our products have earned the trust and recognition of customers.<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> Yuan Long aims to achieve net-zero emissions by 2050. Through various energy management measures, we take practical actions to conserve energy and reduce carbon emissions, contributing to the sustainability of our planet.",
-    "feature1": "Value Inheritance",
-    "feature1_subtitle": "Value inheritance",
-    "feature2": "Occupational Safety and Health",
-    "feature2_subtitle": "Occupational <br/> safety and health",
-    "feature3": "Manufacturing Excellence",
-    "feature3_subtitle": "Manufacturing <br/> excellence",
+    "feature1": "Core Value",
+    "feature1_subtitle": "Core Value",
+    "feature2": "Safe and Happy Workplace",
+    "feature2_subtitle": "Safe and Happy <br/> Workplace", 
+    "feature3": "Excellent Manufacturing",
+    "feature3_subtitle": "Excellent<br/>Manufacturing",
     "feature4": "Green Mission",
-    "feature4_subtitle": "Energy and <br/>  environmental protection",
+    "feature4_subtitle": "Green<br/>Mission",
     "feature5": {
       "title": "Yuan Long Cares About Green Mission",
       "content_1": "Yuan Long is committed to building a green constitution from the inside out",
