--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -66,12 +66,12 @@
     "ba": {
       "title": "光辉退火线",
       "phase1": "Bright Annealing Line",
-      "phase2": "为将经轧研后之硬质钢卷退火,使其晶粒成长而软化而具被加工性。"
+      "phase2": "为将经轧研后之硬质钢卷退火，使其晶粒成长而软化而具被加工性。"
     },
     "spl": {
       "title": "调质精轧机",
       "phase1": "Skin Pass Mill",
-      "phase2": "为进行钢卷调质作业,提升产品亮度与加工性。"
+      "phase2": "为进行钢卷调质作业，提升产品亮度与加工性。"
     },
     "tll": {
       "title": "张力整平线",
@@ -163,7 +163,7 @@
     },
     "teamwork": {
       "title": "团队合作",
-      "content": "在我们的公司，每位成员都是团队的一部分。我们鼓励相互支持与交流，共同面对挑战"
+      "content": "在我们的公司，每位成员都是团队的一部分。我们鼓励相互支持与交流，共同面对挑战。"
     },
     "inclusiveEnvironment": {
       "title": "包容性环境",
