--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -66,12 +66,12 @@
     "ba": {
       "title": "光輝退火線",
       "phase1": "Bright Annealing Line",
-      "phase2": "為將經軋研後之硬質鋼捲退火,使其晶粒成長而軟化而具被加工性。"
+      "phase2": "為將經軋研後之硬質鋼捲退火，使其晶粒成長而軟化而具被加工性。"
     },
     "spl": {
       "title": "調質精軋機",
       "phase1": "Skin Pass Mill",
-      "phase2": "為進行鋼捲調質作業,提昇產品亮度與加工性。"
+      "phase2": "為進行鋼捲調質作業，提昇產品亮度與加工性。"
     },
     "tll": {
       "title": "張力整平線",
@@ -163,7 +163,7 @@
     },
     "teamwork": {
       "title": "團隊合作",
-      "content": "在我們的公司，每位成員都是團隊的一部分。我們鼓勵相互支持與交流，共同面對挑戰"
+      "content": "在我們的公司，每位成員都是團隊的一部分。我們鼓勵相互支持與交流，共同面對挑戰。"
     },
     "inclusiveEnvironment": {
       "title": "包容性環境",
