--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -21,7 +21,7 @@
     "intro": "Yuan long stainless steel corp."
   },
   "index": {
-    "intro": "<span class='h5'>远龙不锈钢</span>股份有限公司成立于2005年，隶属远东集团所有，为冷轧不锈钢供应商，年产能13万吨，产品销售全球40余国。<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙以台湾为基地，于全球金属加工业市场中展现傲人实力。<br><img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙全面执行质量管理系统，落实持续改善的精神，不断提升质量与生产力，产品深获顾客信赖与肯定。<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙以2050年达到净零排放为目标，通过各项能源管理措施，以实际行动做好节约减碳，为地球永续尽一份心力。",
+    "intro": "<span class='h5'>远龙不锈钢</span>股份有限公司成立于2005年，隶属远东集团所有，为冷轧不锈钢供应商，年产能13万吨，产品销售全球40余国。<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙以台湾为基地，在全球金属加工业市场中展现出色实力。<br><img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙全面执行质量管理系统，落实持续改进的精神，不断提升质量与生产力，产品深获客户信赖与肯定。<br> <img src='/assets/img/arrow.svg' alt='arrow' style='width: 12px; height: 12px;'> 远龙以2050年实现净零排放为目标，通过各项能源管理措施，以实际行动做好节约减碳，为地球永续尽一份心力。",
     "feature1": "价值传承",
     "feature1_subtitle": "Core Value",
     "feature2": "幸福职安",
@@ -32,14 +32,14 @@
     "feature4_subtitle": "Green<br/>Mission",
     "feature5": {
       "title": "远龙在乎绿色使命",
-      "content_1": "远龙致力打造由内而外的绿色体质",
+      "content_1": "远龙致力于打造由内而外的绿色体质",
       "content_2": "采用ISO 50001能源管理系统及欧盟认证再生能源",
       "content_3": "优先采购绿色环保标章原物料，选用再生材料制作包装",
       "content_4": "目标2050年实现净零排放，实践企业永续发展愿景"
     },
     "feature6": {
       "title": "ISO 9001、JIS mark及IATF 16949 质量政策",
-      "content_1": "我们全面执行ISO 9001、JIS Q1001、及IATF 16949等相关作业标准来架构质量管理系统，以提升不锈钢专业能力及服务质量，并落实持续改善精神提升质量与生产力，达到顾客满意的水平。我们承诺会依据质量政策建立质量目标，并在符合顾客及法令要求基础下，进行各项改善措施以持续改善质量管理系统。",
+      "content_1": "我们全面执行ISO 9001、JIS Q1001及IATF 16949等相关作业标准来构建质量管理系统，以提升不锈钢专业能力及服务质量，并落实持续改进精神提升质量与生产力，达到客户满意的水平。 我们承诺会依据质量政策建立质量目标，并在符合客户及法规要求基础上，进行各项改进措施以持续改进质量管理系统。",
       "btn": "Learn More"
     }
   },
