--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -71,17 +71,17 @@
     "spl": {
       "title": "调质精轧机",
       "phase1": "Skin Pass Mill",
-      "phase2": "为进行钢卷调质作业，提升产品亮度与加工性。"
+      "phase2": "进行钢卷调质作业，提升产品亮度与加工性。"
     },
     "tll": {
       "title": "张力整平线",
       "phase1": "Tension Levelling Line",
-      "phase2": "为将钢板表面整平，获得更好的表面平坦度及调整机械性质。"
+      "phase2": "将钢板表面整平，获得更好的表面平坦度及调整机械性质。"
     },
     "sl": {
       "title": "钢卷分条线",
       "phase1": "Slitting Line",
-      "phase2": "主要功能为依订单需求将钢卷分条为各种不同宽度尺寸之窄幅钢卷"
+      "phase2": "依订单需求将钢卷分条为各类不同宽度尺寸的窄幅钢卷。"
     }
   },
   "company": {
@@ -114,7 +114,7 @@
     "title": "质量政策",
     "cert": {
       "title": "ISO 9001、JIS mark及IATF 16949 质量政策",
-      "phase1": "我们全面执行ISO 9001、JIS Q1001、及IATF 16949等相关作业标准来架构质量管理系统，以提升不锈钢专业能力及服务质量，并落实持续改善精神提升质量与生产力，达到顾客满意的水准。我们承诺会依据质量政策建立质量目标，并在符合顾客及法令要求基础下，进行各项改善措施以持续改善质量管理系统。"
+      "phase1": "我们全面执行ISO 9001、JIS Q1001及IATF 16949等相关作业标准来构建质量管理系统，以提升不锈钢专业能力及服务质量，并落实持续改进精神提升质量与生产力，达到客户满意的水平。 我们承诺会依据质量政策建立质量目标，并在符合客户及法规要求基础上，进行各项改进措施以持续改进质量管理系统。"
     },
     "policy": {
       "title": "ISO 9001质量管理系统/IATF 16949汽车认证系统质量政策",
@@ -123,8 +123,8 @@
     },
     "lab": {
       "title": "实验室质量政策",
-      "phase1": "在秉持质量政策的意念下，落实持续改善精神，提升产品质量，达到顾客满意的水准。",
-      "phase2": "ISO/IEC 17025 远龙实验室(编号：3537) 质量政策：以公正、独立、透明的原则，提供有效率及信赖的测试服务。"
+      "phase1": "在秉持质量政策的理念下，落实持续改进精神，提升产品质量，达到客户满意的水平。",
+      "phase2": "ISO/IEC 17025 远龙实验室（编号3537）质量政策：以公正、独立、透明的原则，提供高效及可信赖的测试服务。"
     }
   },
   "cert":{
@@ -159,7 +159,7 @@
     "title": "人才招聘",
     "coreValues": {
       "title": "公司核心价值",
-      "content": "我们秉持合作、诚信、专业、当责的核心价值，致力于在每一个环节中提供卓越的服务。"
+      "content": "我们秉持「合作、诚信、专业、当责」的核心价值，致力于在每一个环节中提供卓越的服务。"
     },
     "teamwork": {
       "title": "团队合作",
@@ -179,7 +179,7 @@
     },
     "joinUs": {
       "title": "加入我们",
-      "content": "如果您想成为这个充满活力和多元化的团队一员，现在就加入我们！请主动投履历。"
+      "content": "如果您想成为这个充满活力和多元化的团队一员，现在就加入我们！请主动投递简历。"
     },
     "benefits": {
       "title": "员工福利",
