--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -159,7 +159,7 @@
     "title": "人才招募",
     "coreValues": {
       "title": "公司核心價值",
-      "content": "我們秉持合作、誠信、專業、當責的核心價值，致力於在每一個環節中提供卓越的服務。"
+      "content": "我們秉持「合作、誠信、專業、當責」的核心價值，致力於在每一個環節中提供卓越的服務。"
     },
     "teamwork": {
       "title": "團隊合作",
@@ -196,7 +196,7 @@
       },
       "companyBenefits": {
         "title": "公司福利項目：",
-        "content": "勞健保、職保、團保、勞退提撥、員工健康檢查、提供員工制服、提供員工廠內停車位、親子旅遊活動、員工旅遊、讀書會、社團活動、聖誕活動(移工同樂會)、尾牙活動、員工榮退歡送會。"
+        "content": "勞健保、職保、團保、勞退提撥、員工健康檢查、提供員工制服、提供員工廠內停車位(免費)、親子旅遊活動、員工旅遊、讀書會、社團活動、聖誕活動(移工同樂會)、尾牙活動、員工榮退歡送會。"
       },
       "training": {
         "title": "教育訓練",
